INCLUDE_DIRECTORIES(${ivf2_SOURCE_DIR}/include) 

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
	ADD_EXECUTABLE(beam_editord beam_editor_example.cpp)
	TARGET_LINK_LIBRARIES(beam_editord ivfuid ivfd generatord gladd glfw gladd imgui::imgui PNG::PNG JPEG::JPEG ZLIB::ZLIB glfw GLEW::GLEW OpenGL::GL Freetype::Freetype assimp::assimp)
	INSTALL_TARGETS(/bin beam_editord)
	set_target_properties(beam_editord PROPERTIES FOLDER "examples")
else()
	ADD_EXECUTABLE(beam_editor beam_editor_example.cpp)
	TARGET_LINK_LIBRARIES(beam_editor ivfui ivf generator glad generatord glfw imgui::imgui PNG::PNG JPEG::JPEG ZLIB::ZLIB glfw GLEW::GLEW OpenGL::GL Freetype::Freetype assimp::assimp)
	INSTALL_TARGETS(/bin beam_editor)
	set_target_properties(beam_editor PROPERTIES FOLDER "examples")
endif()    