file(GLOB SOURCE_FILES *.cpp)
file(GLOB INCLUDE_FILES *.h)

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_executable(cursor1d cursor1.cpp)
    target_link_libraries(cursor1d PRIVATE ivfuid ivfd generatord glfw gladd imgui::imgui PNG::PNG JPEG::JPEG ZLIB::ZLIB glfw GLEW::GLEW OpenGL::GL Freetype::Freetype)
    target_include_directories(cursor1d PRIVATE ${Stb_INCLUDE_DIR})
    add_dependencies(cursor1d gladd generatord ivfd ivfuid)
    set_target_properties(cursor1d PROPERTIES FOLDER "examples")
else()
    add_executable(cursor1 cursor1.cpp)
    target_link_libraries(cursor1 PRIVATE ivfui ivf generator glfw glad imgui::imgui PNG::PNG JPEG::JPEG ZLIB::ZLIB glfw GLEW::GLEW OpenGL::GL Freetype::Freetype)
    target_include_directories(cursor1 PRIVATE ${Stb_INCLUDE_DIR})
    add_dependencies(cursor1 glad generator ivf ivfui)
    set_target_properties(cursor1 PROPERTIES FOLDER "examples")
endif()