INCLUDE_DIRECTORIES(${ivf2_SOURCE_DIR}/include) 

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
	ADD_EXECUTABLE(editor1d editor_example.cpp)
	TARGET_LINK_LIBRARIES(editor1d ivfuid ivfd generatord gladd glfw gladd imgui::imgui PNG::PNG JPEG::JPEG ZLIB::ZLIB glfw GLEW::GLEW OpenGL::GL Freetype::Freetype assimp::assimp)
	INSTALL_TARGETS(/bin editor1d)
	set_target_properties(editor1d PROPERTIES FOLDER "examples")
else()
	ADD_EXECUTABLE(editor1 editor_example.cpp)
	TARGET_LINK_LIBRARIES(editor1 ivfui ivf generator glad generatord glfw imgui::imgui PNG::PNG JPEG::JPEG ZLIB::ZLIB glfw GLEW::GLEW OpenGL::GL Freetype::Freetype assimp::assimp)
	INSTALL_TARGETS(/bin editor1)
	set_target_properties(editor1 PROPERTIES FOLDER "examples")
endif()    